--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>AP Human Geography</h1>
-    <select onchange="navigateToPage(this)">
+    <select class="text" onchange="navigateToPage(this)">
         <option>unit 1</option>
         <option value="Vocabunit2.html">unit 2</option>
         <option value="Vocabunit3.html">unit 3</option>
