--- a/Vocabunit3.html
+++ b/Vocabunit3.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link rel="stylesheet" type="text/css" href="StyleSheet1.css" />
 </head>
 <body>
     <table border="1">
@@ -123,6 +124,11 @@
             <td>Only certain immigrants may come in, immigrants with bad backgrounds will be turned down.</td>
         </tr>
     </table>
-    <a href="HTMLPage1.html">Back</a>
+    <button onclick="goToPage()">Back</button>
+    <script>
+    function goToPage() {
+        window.location.href = 'HTMLPage1.html';
+    }
+    </script>
 </body>
 </html>
